--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,64 @@
-add code here!!
+<div class="container mt-4">
+    <h1 class="mb-4">{{ title }}</h1>
+
+    <div class="table-responsive">
+        <table class="table table-striped table-hover align-middle">
+            <thead class="table-light">
+                <tr>
+                    <th scope="col" style="width: 3%;">
+                        <input type="checkbox" class="form-check-input">
+                    </th>
+                    <th scope="col">Nombre</th>
+                    <th scope="col">Fecha</th>
+                    <th scope="col">Dueños</th>
+                    <th scope="col">
+                        <div class="dropdown">
+                            <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown">
+                                Acciones
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <button class="dropdown-item" data-bs-toggle="modal"
+                                        data-bs-target="#fileModal">Nuevo</button>
+                                </li>
+                                <li>
+                                    <button class="dropdown-item" (click)="deleteFiles()"
+                                        [disabled]="selectedFilesIds.length === 0">
+                                        Borrar
+                                    </button>
+                                </li>
+                            </ul>
+                        </div>
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let file of files; let i = index">
+                    <td>
+                        <input type="checkbox" class="form-check-input" (change)="toggleFileSelection(file)"
+                            [checked]="isFileSelected(file)">
+                    </td>
+                    <td>
+                        <i *ngIf="file.type === FileType.FOLDER" class="bi bi-folder me-2"></i>
+                        <i *ngIf="file.type === FileType.FILE" class="bi bi-file-earmark me-2"></i>
+                        <span [attr.title]="file.name.length > 10 ? file.name : ''">
+                            {{ file.name | slice:0:10 }}<span *ngIf="file.name.length > 10">...</span>
+                        </span>
+                    </td>
+                    <td>{{ file.creation | date:'mediumDate' }}</td>
+                    <td>
+                        <div class="d-flex align-items-center">
+                            <ng-container *ngFor="let owner of file.owners; let j = index">
+                                <img *ngIf="j < 3" [src]="owner.avatarUrl" alt="{{ owner.name }}"
+                                    class="rounded-circle me-1" style="width: 32px; height: 32px;">
+                                <span *ngIf="j === 3">+{{ file.owners.length - 3 }}</span>
+                            </ng-container>
+                        </div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <app-file (newFileEvent)="addFile($event)" id="fileModal"></app-file>
+</div>
