--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,24 @@
 <div class="container mt-4">
     <h1 class="mb-4">{{ title }}</h1>
 
+    <div class="d-flex justify-content-end mb-3">
+        <div class="dropdown">
+            <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown">
+                Acciones
+            </button>
+            <ul class="dropdown-menu">
+                <li>
+                    <button class="dropdown-item" (click)="openFileModal()">Nuevo</button>
+                </li>
+                <li>
+                    <button class="dropdown-item" (click)="deleteFiles()" [disabled]="selectedFilesIds.length === 0">
+                        Borrar
+                    </button>
+                </li>
+            </ul>
+        </div>
+    </div>
+
     <div class="table-responsive">
         <table class="table table-striped table-hover align-middle">
             <thead class="table-light">
@@ -11,25 +29,6 @@
                     <th scope="col">Nombre</th>
                     <th scope="col">Fecha</th>
                     <th scope="col">Dueños</th>
-                    <th scope="col">
-                        <div class="dropdown">
-                            <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown">
-                                Acciones
-                            </button>
-                            <ul class="dropdown-menu">
-                                <li>
-                                    <button class="dropdown-item" data-bs-toggle="modal"
-                                        data-bs-target="#fileModal">Nuevo</button>
-                                </li>
-                                <li>
-                                    <button class="dropdown-item" (click)="deleteFiles()"
-                                        [disabled]="selectedFilesIds.length === 0">
-                                        Borrar
-                                    </button>
-                                </li>
-                            </ul>
-                        </div>
-                    </th>
                 </tr>
             </thead>
             <tbody>
@@ -60,5 +59,7 @@
         </table>
     </div>
 
-    <app-file (newFileEvent)="addFile($event)" id="fileModal"></app-file>
+    <app-file *ngIf="showFileModal" [folders]="folders" [allOwners]="allOwners" (newFileEvent)="addFile($event)"
+        (closeModal)="closeFileModal()">
+    </app-file>
 </div>
