--- a/src/file/file.component.html
+++ b/src/file/file.component.html
@@ -1,9 +1,9 @@
-<div class="modal" tabindex="-1" role="dialog">
+<div class="modal" tabindex="-1" role="dialog" [style.display]="'block'">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">Nuevo Archivo/Carpeta</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                <button type="button" class="btn-close" (click)="close()" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <form (ngSubmit)="submitFileForm()">
@@ -12,11 +12,13 @@
                         <input type="text" class="form-control" id="name" [(ngModel)]="newFile.name" name="name"
                             required>
                     </div>
+
                     <div class="mb-3">
                         <label for="creation" class="form-label">Fecha</label>
                         <input type="date" class="form-control" id="creation" [(ngModel)]="newFile.creation"
                             name="creation" required>
                     </div>
+
                     <div class="mb-3">
                         <label for="type" class="form-label">Tipo</label>
                         <select class="form-select" id="type" [(ngModel)]="newFile.type" name="type">
@@ -24,7 +26,36 @@
                             <option [value]="FileType.FOLDER">Carpeta</option>
                         </select>
                     </div>
-                    <button type="submit" class="btn btn-primary">Guardar</button>
+
+                    <div class="mb-3" *ngIf="newFile.type === FileType.FILE">
+                        <label for="parent" class="form-label">Carpeta</label>
+                        <select class="form-select" id="parent" [(ngModel)]="newFile.parentId" name="parentId">
+                            <option [ngValue]="null">Ninguna</option>
+                            <option *ngFor="let folder of folders" [ngValue]="folder.id">{{ folder.name }}</option>
+                        </select>
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="owners" class="form-label">Dueños</label>
+                        <div class="input-group">
+                            <select class="form-select" [(ngModel)]="selectedOwner" name="selectedOwner">
+                                <option *ngFor="let owner of allOwners" [ngValue]="owner">{{ owner.name }}</option>
+                            </select>
+                            <button type="button" class="btn btn-primary" (click)="addOwner()">+</button>
+                        </div>
+                        <div class="mt-2">
+                            <span *ngFor="let owner of newFile.owners" class="badge bg-primary me-2 mb-2">
+                                {{ owner.name }}
+                                <button type="button" class="btn-close btn-close-white ms-1"
+                                    (click)="removeOwner(owner)"></button>
+                            </span>
+                        </div>
+                    </div>
+
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" (click)="close()">Volver</button>
+                        <button type="submit" class="btn btn-primary">Guardar</button>
+                    </div>
                 </form>
             </div>
         </div>
