--- a/src/file/file.component.html
+++ b/src/file/file.component.html
@@ -22,8 +22,8 @@
                     <div class="mb-3">
                         <label for="type" class="form-label">Tipo</label>
                         <select class="form-select" id="type" [(ngModel)]="newFile.type" name="type">
-                            <option [value]="FileType.FILE">Archivo</option>
-                            <option [value]="FileType.FOLDER">Carpeta</option>
+                            <option [ngValue]="FileType.FILE">Archivo</option>
+                            <option [ngValue]="FileType.FOLDER">Carpeta</option>
                         </select>
                     </div>
 
